[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "genephenextract"
version = "0.1.0"
description = "LLM-powered extraction of gene, variant, and phenotype data from PubMed literature"
readme = "README.md"
authors = [{name = "Brett Kroncke", email = "brett.kroncke@vumc.org"}]
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
]

[project.optional-dependencies]
langextract = [
    "langextract>=0.2.0",
]

[project.scripts]
genephenextract = "genephenextract.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
genephenextract = [
    "schema/*.json",
]

[tool.black]
line-length = 100

[tool.pytest.ini_options]
pythonpath = ["src"]

