[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gene-literature-collector"
version = "0.2.0"
description = "Collect and export PubMed metadata for genes of interest"
readme = "README.md"
authors = [{name = "OpenAI"}]
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
]

relevance = [
    "anthropic>=0.39.0",
]

dev = [
    "gene-literature-collector[test]",
]

[project.scripts]
collect-gene-literature = "collect_literature:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = ["--strict-markers", "--tb=short"]
